<resources>
    <string name="app_name">ProxyApp</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="type_values">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="setting_cat_controller">Service Controller</string>
    <string name="setting_proxy_switch">Prox Switch</string>
    <string name="setting_profile">Profile</string>
    <string name="setting_cat_settings">Proxy Settings</string>
    <string name="setting_auto_setting">Auto setting</string>
    <string name="setting_auto_setting_summary">Get proxy settings from the PAC file automatically</string>
    <string name="setting_host">Host</string>
    <string name="setting_port">Port</string>
    <string name="setting_proxy_type">Proxy_Type</string>
    <string name="setting_auto_connect">Auto Connect</string>
    <string name="setting_proxy_available">Smart Proxy when specified network is available</string>
    <string name="setting_proxy_not_available">Smart Proxy when specified network is not available</string>
</resources>